# gitpulse

./: BACKLOG.md  CLAUDE.md  mission-control.toml  pyproject.toml
.github/workflows/: ci.yml
src/gitpulse/: app.py  cache.py  git_analyzer.py  github_client.py  rate_limit.py
src/gitpulse/static/: index.html
tests/: conftest.py  test_app.py  test_cache.py  test_git_analyzer.py  test_github_client.py
tests/e2e/: conftest.py  test_dashboard.py
